# ollama_job_interviewer

./: .env  README.md  pyproject.toml
mainPackage/: __init__.py  __main__.py  api.py  cli.py  job_description.py  main.py  ranking.py  web.py
mypackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
