[project]
name = "mypackage"
version = "0.1.0"
description = "Generate JDs and rank applicants via Ollama"
authors = [{name = "Shuyu Shi", email = "ssh18@student.ubc.ca"}]
requires-python = ">=3.9"
dependencies    = [
    "requests>=2.32",
    "pypdf>=4.2",
]


[project.optional-dependencies]
web = [
    "streamlit>=1.35",            # Or reflex==0.5.2, fastapi==1.2 depending on choice
    "pandas",
]

dev = ["pytest", "black", "ruff", "build", "twine"]

[project.scripts]
mainPackage = "mainPackage.__main__:cli"      # existing CLI
mainPackage-web = "mainPackage.web:cli"     # website launcher

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
